[package]
name = "batry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "time", "sync"] }
upower_dbus = "0.3.2"
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }
