[package]
name = "batry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "time", "sync"] }
tokio-stream = { version = "0.1.14", features = ["time"] }
upower_dbus = "0.3.2"
zbus = { version = "3.14.1", features = ["tokio"], default-features = false }

[profile.release]
lto = true
